--- a/index.html
+++ b/index.html
@@ -1,105 +1,118 @@
-<!DOCTYPE html>  <html lang="en">  
-<head>  
-    <meta charset="UTF-8">  
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">  
-    <title>Ai Assistant</title>  
-    <link rel="stylesheet" href="styles.css">  
-</head>  
-<body>  
-    <!-- Loading Screen -->  
-    <div id="loading-screen">  
-        <img src="https://files.catbox.moe/j6x9zj.jpg" alt="Gxyenn Logo" class="profile-pic">  
-        <h1>AiAsistentYou</h1>  
-        <p>Dev Gxyenn</p>  
-        <p class="loading-text">Loading...</p>  
-    </div>  <!-- Main Content -->  
-<div id="main-content" style="display: none;">  
-    <header>  
-        <img src="https://files.catbox.moe/j6x9zj.jpg" alt="Gxyenn Assistant" class="profile-pic">  
-        <h1>AiGxyenn</h1>  
-        <p>Ai Assistant By Gxyenn</p>  
-    </header>  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Gxyenn Assistant</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- Loading Screen -->
+    <div id="loading-screen">
+        <img src="https://files.catbox.moe/j6x9zj.jpg" alt="Gxyenn Logo" class="profile-pic">
+        <h1>Gxyenn Store</h1>
+        <p>Store Aman Dan Terpercaya</p>
+        <p class="loading-text">Loading...</p>
+    </div>
 
-    <main>  
-        <!-- Chat Box -->  
-        <div id="chat-box" class="chat-box">  
-            <div class="ai-message">  
-                Haii, Aku Gxyenn Assistant, Saya Akan Melayani Anda, Apa Yang Ingin Anda Cari??  
-            </div>  
-        </div>  
+    <!-- Main Content -->
+    <div id="main-content" style="display: none;">
+        <header>
+            <img src="https://files.catbox.moe/j6x9zj.jpg" alt="Gxyenn Assistant" class="profile-pic">
+            <h1>AiGxyenn</h1>
+            <p>Ai Assistant By Gxyenn</p>
+        </header>
 
-        <!-- Input untuk Kirim Pesan ke API -->  
-        <div class="input-container">  
-            <input type="text" id="user-input" placeholder="Ketik sesuatu...">  
-            <button onclick="sendMessage()">Kirim</button>  
-            <button onclick="resetChat()">Reset</button>  
-        </div>  
+        <main>
+            <!-- Chat Box -->
+            <div id="chat-box" class="chat-box">
+                <div class="ai-message">
+                    Haii, Aku Gxyenn Assistant, Saya Akan Melayani Anda, Apa Yang Ingin Anda Cari??
+                </div>
+            </div>
 
-        <!-- Tombol Script Bot WA -->  
-        <div class="button-container">  
-            <a href="https://github.com/Gxyenn/XLESYVIP" class="script-bot-btn" target="_blank">SCRIP BOT WA</a>  
-        </div>  
-    </main>  
+            <!-- Input untuk Kirim Pesan ke API -->
+            <div class="input-container">
+                <input type="text" id="user-input" placeholder="Ketik sesuatu...">
+                <button onclick="requestPermission()">Kirim</button>
+                <button onclick="resetChat()">Reset</button>
+            </div>
 
-    <!-- WhatsApp Icon -->  
-    <a href="https://wa.me/6283877636168" class="whatsapp-btn" target="_blank">  
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">  
-    </a>  
-</div>  
+            <!-- Tombol Script Bot WA -->
+            <div class="button-container">
+                <a href="https://github.com/Gxyenn/XLESYVIP" class="script-bot-btn" target="_blank">SCRIP BOT WA</a>
+            </div>
+        </main>
 
-<script>  
-    // Simulasi loading screen  
-    window.onload = function () {  
-        setTimeout(function () {  
-            document.getElementById('loading-screen').style.display = 'none';  
-            document.getElementById('main-content').style.display = 'block';  
-        }, 2000);  
-    };  
+        <!-- WhatsApp Icon -->
+        <a href="https://wa.me/6283877636168" class="whatsapp-btn" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+        </a>
+    </div>
 
-    // Fungsi untuk Kirim Pesan ke API  
-    function sendMessage() {  
-        const userInput = document.getElementById('user-input').value;  
-        const chatBox = document.getElementById('chat-box');  
-        if (!userInput) return alert("Harap masukkan pesan!");  
+    <script>
+        // Simulasi loading screen
+        window.onload = function () {
+            setTimeout(function () {
+                document.getElementById('loading-screen').style.display = 'none';
+                document.getElementById('main-content').style.display = 'block';
+            }, 2000);
+        };
 
-        // Tambahkan pesan user di sebelah kanan  
-        const userMessage = document.createElement('div');  
-        userMessage.classList.add('user-message');  
-        userMessage.textContent = userInput;  
-        chatBox.appendChild(userMessage);  
+        // Fungsi meminta izin sebelum API dijalankan
+        function requestPermission() {
+            const izin = confirm("Server ini tidak bisa berjalan tanpa izin. Apakah Anda ingin melanjutkan?");
+            if (izin) {
+                sendMessage();
+            } else {
+                alert("Anda tidak mengizinkan server berjalan.");
+            }
+        }
 
-        // Panggil API  
-        const apiUrl = `https://api.siputzx.my.id/api/ai/esia?content=${encodeURIComponent(userInput)}`;  
-        fetch(apiUrl)  
-            .then(response => response.json())  
-            .then(data => {  
-                const aiMessage = document.createElement('div');  
-                aiMessage.classList.add('ai-message');  
-                aiMessage.textContent = data.result  
-                    ? data.result  
-                    : "Gagal mendapatkan respon.";  
-                chatBox.appendChild(aiMessage);  
-                chatBox.scrollTop = chatBox.scrollHeight;  
-            })  
-            .catch(() => {  
-                const errorMessage = document.createElement('div');  
-                errorMessage.classList.add('error-message');  
-                errorMessage.textContent = "Terjadi kesalahan, coba lagi.";  
-                chatBox.appendChild(errorMessage);  
-                chatBox.scrollTop = chatBox.scrollHeight;  
-            });  
+        // Fungsi untuk Kirim Pesan ke API
+        function sendMessage() {
+            const userInput = document.getElementById('user-input').value;
+            const chatBox = document.getElementById('chat-box');
+            if (!userInput) return alert("Harap masukkan pesan!");
 
-        // Reset input  
-        document.getElementById('user-input').value = '';  
-    }  
+            // Tambahkan pesan user di sebelah kanan
+            const userMessage = document.createElement('div');
+            userMessage.classList.add('user-message');
+            userMessage.textContent = userInput;
+            chatBox.appendChild(userMessage);
 
-    // Reset Chat  
-    function resetChat() {  
-        const chatBox = document.getElementById('chat-box');  
-        chatBox.innerHTML = '<div class="ai-message">Haii, Aku Gxyenn Assistant, Saya Akan Melayani Anda, Apa Yang Ingin Anda Cari??</div>';  
-    }  
-</script>
+            // Panggil API
+            const apiUrl = `https://api.siputzx.my.id/api/ai/esia?content=${encodeURIComponent(userInput)}`;
+            fetch(apiUrl)
+                .then(response => response.json())
+                .then(data => {
+                    const aiMessage = document.createElement('div');
+                    aiMessage.classList.add('ai-message');
+                    aiMessage.textContent = data.result
+                        ? data.result
+                        : "Gagal mendapatkan respon.";
+                    chatBox.appendChild(aiMessage);
+                    chatBox.scrollTop = chatBox.scrollHeight;
+                })
+                .catch(() => {
+                    const errorMessage = document.createElement('div');
+                    errorMessage.classList.add('error-message');
+                    errorMessage.textContent = "Terjadi kesalahan, coba lagi.";
+                    chatBox.appendChild(errorMessage);
+                    chatBox.scrollTop = chatBox.scrollHeight;
+                });
 
-</body>  
-    </html>
+            // Reset input
+            document.getElementById('user-input').value = '';
+        }
+
+        // Reset Chat
+        function resetChat() {
+            const chatBox = document.getElementById('chat-box');
+            chatBox.innerHTML = '<div class="ai-message">Haii, Aku Gxyenn Assistant, Saya Akan Melayani Anda, Apa Yang Ingin Anda Cari??</div>';
+        }
+    </script>
+
+</body>
+</html>
