--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             object-fit: cover;
             margin: 0 auto;
             opacity: 0;
-            animation: fadeInImage 2s forwards 0.5s, glowEffect 2s forwards 2s;
+            animation: fadeInImage 2s forwards 0.5s, glowEffect 2s infinite 2s; /* Updated for infinite loop */
         }
 
         .links {
@@ -197,4 +197,4 @@
     </script>
 
 </body>
-</html>
+            </html>
