--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <div class="close-menu-icon" onclick="toggleMenu()">
             <i class="fas fa-times"></i>
         </div>
-        <a href="https://Gxyenn.github.io/#profile" target="_self">Profile</a>
+        <a href="#profile" onclick="showProfile()">Profile</a>
     </div>
 
     <img class="profile-image" src="https://files.catbox.moe/j6x9zj.jpg" alt="Profile Picture">
@@ -244,6 +244,11 @@
             menu.classList.toggle('open');
         }
 
+        // Function to show the profile section when clicking the link
+        function showProfile() {
+            document.getElementById("profileSection").style.display = "block";
+        }
+
         // Check if the URL contains #profile and show the profile section
         if (window.location.hash === "#profile") {
             document.getElementById("profileSection").style.display = "block";
@@ -251,4 +256,4 @@
     </script>
 
 </body>
-</html>
+                                                                                                                     </html>
