--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
         <p>
             Gxyenn is an aspiring developer currently in the early stages of learning web development, with a keen interest in creating engaging and functional websites. As a self-taught developer, Gxyenn is exploring various technologies and tools, including HTML, CSS, JavaScript, and others. Though still a beginner, Gxyenn is dedicated to improving and experimenting with new ideas to make meaningful projects. If you are looking for a beginner developer with a passion for learning and growth, Gxyenn is an excellent choice for small-scale projects and collaborations. With a strong focus on continuous learning, Gxyenn is eager to contribute to the development community and grow as a web developer.
         </p>
+        <p><strong>Karena saya pemula, saya terus belajar dan mengembangkan kemampuan saya dalam pengembangan web.</strong></p> <!-- Added this line -->
         <img src="https://via.placeholder.com/150" alt="Random Image">
     </div>
 
@@ -235,25 +236,4 @@
         <h2>Gxyenn's Profile</h2>
         <p><strong>Age:</strong> 13</p>
         <p><strong>Location:</strong> Privasi</p>
-    </div>
-
-    <script>
-        // Function to toggle the menu visibility
-        function toggleMenu() {
-            var menu = document.getElementById('menu');
-            menu.classList.toggle('open');
-        }
-
-        // Function to show the profile section when clicking the link
-        function showProfile() {
-            document.getElementById("profileSection").style.display = "block";
-        }
-
-        // Check if the URL contains #profile and show the profile section
-        if (window.location.hash === "#profile") {
-            document.getElementById("profileSection").style.display = "block";
-        }
-    </script>
-
-</body>
-                                                                                                                     </html>
+        </div>
