--- a/index.html
+++ b/index.html
@@ -93,8 +93,10 @@
             width: 150px;
             height: 150px;
             object-fit: cover;
+            animation: glowEffect 2s infinite;
         }
 
+        /* Animations */
         @keyframes fadeIn {
             0% { opacity: 0; }
             100% { opacity: 1; }
@@ -126,6 +128,17 @@
             100% {
                 box-shadow: 0 0 5px white, 0 0 10px white, 0 0 15px #0000ff, 0 0 20px #0000ff, 0 0 25px #0000ff, 0 0 30px #0000ff, 0 0 35px #0000ff;
             }
+        }
+
+        /* Profile Information */
+        .profile-info {
+            font-size: 18px;
+            color: white;
+            margin-top: 20px;
+        }
+
+        .profile-info p {
+            margin: 10px 0;
         }
 
         /* Menu Hamburger */
@@ -224,16 +237,38 @@
     <div class="about-me">
         <h2>About Gxyenn</h2>
         <p>
-            Gxyenn is an aspiring developer currently in the early stages of learning web development, with a keen interest in creating engaging and functional websites. As a self-taught developer, Gxyenn is exploring various technologies and tools, including HTML, CSS, JavaScript, and others. Though still a beginner, Gxyenn is dedicated to improving and experimenting with new ideas to make meaningful projects. If you are looking for a beginner developer with a passion for learning and growth, Gxyenn is an excellent choice for small-scale projects and collaborations. With a strong focus on continuous learning, Gxyenn is eager to contribute to the development community and grow as a web developer.
+            Gxyenn is an aspiring developer currently in the early stages of learning web development, with a keen interest in creating engaging and functional websites. As a self-taught developer, Gxyenn is exploring various technologies and tools, including HTML, CSS, JavaScript, and others. Though still a beginner, Gxyenn is dedicated to improving and experimenting with new ideas to make meaningful projects.
         </p>
-        <p><strong>Karena saya pemula, saya terus belajar dan mengembangkan kemampuan saya dalam pengembangan web.</strong></p> <!-- Added this line -->
-        <img src="https://via.placeholder.com/150" alt="Random Image">
     </div>
 
-    <!-- Profile Section (Hidden by Default) -->
+    <!-- Profile Section -->
     <div class="profile-section" id="profileSection">
         <img src="https://files.catbox.moe/j6x9zj.jpg" alt="Profile Picture">
-        <h2>Gxyenn's Profile</h2>
-        <p><strong>Age:</strong> 13</p>
-        <p><strong>Location:</strong> Privasi</p>
+        <div class="profile-info">
+            <p><strong>Name:</strong> Gxyenn</p>
+            <p><strong>Age:</strong> Privacy</p>
+            <p><strong>Genre:</strong> Man</p>
+            <p><strong>Hobby:</strong> Create JavaScript/Other</p>
         </div>
+    </div>
+
+    <script>
+        // Function to toggle the menu visibility
+        function toggleMenu() {
+            var menu = document.getElementById('menu');
+            menu.classList.toggle('open');
+        }
+
+        // Function to show the profile section when clicking the link
+        function showProfile() {
+            document.getElementById("profileSection").style.display = "block";
+        }
+
+        // Check if the URL contains #profile and show the profile section
+        if (window.location.hash === "#profile") {
+            document.getElementById("profileSection").style.display = "block";
+        }
+    </script>
+
+</body>
+                                                </html>
