--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <div class="close-menu-icon" onclick="toggleMenu()">
             <i class="fas fa-times"></i>
         </div>
-        <a href="#profile" onclick="showProfile()">Profile</a>
+        <a href="https://youtube.com/@GxyenDev" target="_blank" title="SupMe">SupMe</a>
     </div>
 
     <img class="profile-image" src="https://files.catbox.moe/j6x9zj.jpg" alt="Profile Picture">
@@ -246,29 +246,3 @@
         <img src="https://files.catbox.moe/j6x9zj.jpg" alt="Profile Picture">
         <div class="profile-info">
             <p><strong>Name:</strong> Gxyenn</p>
-            <p><strong>Age:</strong> Privacy</p>
-            <p><strong>Genre:</strong> Man</p>
-            <p><strong>Hobby:</strong> Create JavaScript/Other</p>
-        </div>
-    </div>
-
-    <script>
-        // Function to toggle the menu visibility
-        function toggleMenu() {
-            var menu = document.getElementById('menu');
-            menu.classList.toggle('open');
-        }
-
-        // Function to show the profile section when clicking the link
-        function showProfile() {
-            document.getElementById("profileSection").style.display = "block";
-        }
-
-        // Check if the URL contains #profile and show the profile section
-        if (window.location.hash === "#profile") {
-            document.getElementById("profileSection").style.display = "block";
-        }
-    </script>
-
-</body>
-                                                </html>
